[gd_scene load_steps=7 format=2]

[ext_resource path="res://TestSubjects/QueueFreeDummy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Feedback/FeedbackRunner.gd" type="Script" id=3]
[ext_resource path="res://Sequencers/Bool/ToggleSequencer.gd" type="Script" id=4]
[ext_resource path="res://Feedback/ColorFeedback2D.gd" type="Script" id=5]
[ext_resource path="res://Feedback/QueueFreeFeedback.gd" type="Script" id=6]

[node name="QueueFreeDummy" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="ToggleSequencer" type="Node" parent="."]
script = ExtResource( 4 )
time_between_toggles = 0.3

[node name="WarningFeedbackRunner" type="Node" parent="."]
script = ExtResource( 3 )
is_debug_trigger_enabled = false

[node name="ColorFeedback2D" type="Node" parent="WarningFeedbackRunner"]
script = ExtResource( 5 )
TargetPath = NodePath("../../Sprite")
run_time = 0.3
return_time = 0.3
color = Color( 1, 0, 0, 1 )

[node name="RIPFeedbackRunner" type="Node" parent="."]
script = ExtResource( 3 )
is_debug_trigger_enabled = false

[node name="QueueFreeFeedback" type="Node" parent="RIPFeedbackRunner"]
script = ExtResource( 6 )
TargetPath = NodePath("../..")

[connection signal="new_value" from="ToggleSequencer" to="." method="_on_ToggleSequencer_new_value"]
